[package]
name = "loadcell"
version = "0.2.0"
authors = ["DaneSlattery <dane_s@umantec.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "http://github.com/DaneSlattery/hx711"
description = "A no-std embedded-hal package for the hx711 load cell, based on the embedded hal. Has optional support for interrupts on the esp32."
readme = "README.md"

[dependencies]
critical-section = "1.1.2"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
esp32-hal = { version = "0.15.0", optional = true }

[features]
default = []
esp32_interrupt = ["esp32-hal"]


[[example]]
name = "interrupt"
required-features = ["esp32_interrupt"]

[[example]]
name = "polling"
required-features = ["esp32_interrupt"]

[dev-dependencies]
esp-backtrace = { version = "0.8.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.6.0", features = ["esp32", "log"] }
log = { version = "0.4.18" }
critical-section = "1.1.2"
