[package]
name = "loadcell"
version = "0.2.0"
authors = ["DaneSlattery <dane_s@umantec.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "http://github.com/DaneSlattery/hx711"
description = "A no-std embedded-hal package for the hx711 load cell, based on the embedded hal. Has optional support for interrupts on the esp32."
readme = "README.md"
keywords = ["scale", "hx711", "loadcell", "no-std", "driver"]
categories = ["no-std", "embedded", "hardware-support", "science::robotics"]

[dependencies]
esp32-hal = { version = "0.18.0", optional = true, features = ["eh1"] }
critical-section = "1.1.2"
embedded-hal = { version = "1.0.0" }

[features]
default = []
esp32_interrupt = ["esp32-hal"]

[[example]]
name = "interrupt"
required-features = ["esp32_interrupt"]


[dev-dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
log = { version = "0.4.18" }
critical-section = "1.1.2"
