[package]
name = "loadcell"
version = "0.3.0"
authors = ["DaneSlattery <dane_s@umantec.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "http://github.com/DaneSlattery/hx711"
description = "A no-std embedded-hal package for the hx711 load cell, based on the embedded hal. Has optional support for interrupts on the esp32."
readme = "README.md"
keywords = ["scale", "hx711", "loadcell", "no-std", "driver"]
categories = ["no-std", "embedded", "hardware-support", "science::robotics"]

[dependencies]
critical-section = "1.1.2"
embedded-hal = { version = "1.0.0" }
esp-hal = { version = "0.23.1", optional = true }

[[example]]
name = "interrupt"

[[example]]
name = "polling"

[dev-dependencies]
esp-backtrace = { version = "0.15.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
log = { version = "0.4.18" }
esp-hal = { version = "0.23.1", features = ["esp32"] }
